--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Shawn's Personal Site</title>
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="ShawnBest-modified.png" alt="Shawn Best Profile Picture"></td>
+      <td><img src="images/ShawnBest-modified.png" alt="Shawn Best Profile Picture"></td>
       <td><h1>Shawn D Best</h1>
         <p><em>Founder and CTO of <Strong><a href="https://appbrewery.com/">The App Brewery.</a></Strong></em></p>
         <p>I am an iOS and Web Developer. I love ❤ beer an Macaroni</p>
@@ -81,6 +82,7 @@
 <hr>
 <br>
 <a href="contact me.html">Contact Me</a>
+<a href="hobbies.html">My Hobbies</a>
 </body>
 
 </html>
