--- a/contact me.html
+++ b/contact me.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="CSS/styles.css">
   </head>
   <body>
     <h4>Shawn Best Contact Info</h4>
